# Pharmacy-Information-System

./: .gitignore  main.py  pyproject.toml  readme.md  scheme.sql  settings.py  todo.txt
db/: DDL.sql  scheme.sql
db/DDL/: DDL.sql  (+2 more)
fill/: customers.sql  doctors.sql  drug_types.sql  drugs.sql  mixtures.sql  orders.sql  orders_ready_drugs.sql  orders_waiting_drug_supplies.sql  patients.sql  pills.sql  powders.sql  prescriptions.sql  prescriptions_content.sql  production.sql  reserved_drugs.sql  salves.sql  solutions.sql  storage_items.sql  suppliers.sql  supplies.sql  technologies.sql  technology_components.sql  tinctures.sql
insertion/: customers.py  doctors.py  drugs.py  orders.py  orders_ready_drugs.py  orders_waiting_drug_supplies.py  patients.py  prescriptions.py  prescriptions_content.py  production.py  reserved_drugs.py  storage_items.py  suppliers.py  supplies.py  technologies.py  technology_components.py
model/: administration_route.py  customer.py  doctor.py  drug.py  drug_type.py  mixture.py  mixture_type.py  order.py  order_waiting_supply.py  patient.py  pills.py  powder.py  prescription.py  prescription_content.py  production.py  reserved_drug.py  salve.py  solution.py  storage_item.py  supplier.py  supply.py  technology.py  technology_component.py  tincture.py
queries/: 1-1.sql  1.sql  10-1.sql  10-2.sql  10-3.sql  11.sql  12-1.sql  12-2.sql  13-1.sql  13-2.sql  2-3.sql  2-4.sql  5-1.sql  5-2.sql  5-3.sql  5-4.sql  6-1.sql  6-2.sql  8-1.sql  8-2.sql  8.sql  9-1.sql  9-2.sql
report/: report.out  report.tex  report.toc  scheme.pdf_tex  title_page.tex
(+139 files in other folders)
